---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 1] {
    x[-1:5]
}


error: Range indices must be non-negative
  ┌─ testinput:2:7
  │
2 │     x[-1:5]
  │       ^^ range index is negative


